<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MagnetActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="126dp">

        <CheckBox
            android:id="@+id/check_copied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copied_chk"
            app:layout_constraintBottom_toTopOf="@+id/button_copy"
            app:layout_constraintEnd_toStartOf="@+id/check_deleted"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/check_deleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleted_chk"
            app:layout_constraintBottom_toTopOf="@+id/button_detele"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/check_copied"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_btn"
            app:layout_constraintTop_toBottomOf="@+id/check_copied"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_detele"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_detele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn"
            app:layout_constraintTop_toBottomOf="@+id/check_deleted"
            app:layout_constraintStart_toEndOf="@+id/button_copy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_border_color_primary" />
</LinearLayout>