<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ImageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="416dp">

        <TextView
            android:id="@+id/text_copied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uncopied_text"
            android:textColor="@color/red"
            app:layout_constraintBottom_toTopOf="@+id/image_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_viewed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_viewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unviewed_text"
            android:textColor="@color/red"
            app:layout_constraintBottom_toTopOf="@+id/image_main"
            app:layout_constraintEnd_toStartOf="@+id/text_copied"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/image_main"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_image_height"
            app:layout_constraintBottom_toTopOf="@+id/view_images"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_viewed"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/button_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_last"
            app:layout_constraintTop_toBottomOf="@+id/view_images" />

        <Button
            android:id="@+id/button_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_images" />

        <HorizontalScrollView
            android:id="@+id/view_images"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_list_height"
            android:layout_weight="1"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toTopOf="@+id/button_last"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_main">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/button_last"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_main">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="75dp"
                    android:layout_height="79dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="79dp"
                    android:layout_height="77dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="74dp"
                    android:layout_height="78dp"
                    tools:srcCompat="@tools:sample/avatars" />

            </LinearLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_border_color_primary" />
    </LinearLayout>

</LinearLayout>