<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <!--<com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AndroidTest2.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.AndroidTest2.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>-->

    <!--<include layout="@layout/content_main" />-->

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />-->

    <!--<Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />


    <EditText
        android:id="@+id/input_url"
        android:layout_width="304dp"
        android:layout_height="47dp"
        android:hint="@string/url_hint"
        android:inputType="textUri"
        app:layout_constraintBottom_toTopOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="304dp"
        android:layout_height="47dp"
        android:hint="@string/password_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_url" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="305dp"
        android:layout_height="250dp"
        android:layout_marginTop="-30dp"
        app:layout_constraintBottom_toTopOf="@id/button_open_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />-->


    <Button
        android:id="@+id/button_open_setting"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/open_setting_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_open_magnet" />

    <Button
        android:id="@+id/button_open_image"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/open_image_btn"
        app:layout_constraintBottom_toTopOf="@+id/button_open_magnet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_open_magnet"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/open_magnet_btn"
        app:layout_constraintBottom_toTopOf="@+id/button_open_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_open_image" />

    <ImageButton
        android:id="@+id/button_exit"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:layout_marginStart="270dp"
        android:layout_marginBottom="650dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <Button
        android:id="@+id/button_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="net_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_open_setting" />

</androidx.constraintlayout.widget.ConstraintLayout>